migrate to JDK 17 and fully reactive stack